--- a/src/scss/globals/_carousel.scss
+++ b/src/scss/globals/_carousel.scss
@@ -1,5 +1,6 @@
 .carouselFooter {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: var(--spacer-x);
     margin-top: var(--spacer-y);
