--- a/src/scss/globals/_buttons.scss
+++ b/src/scss/globals/_buttons.scss
@@ -1,5 +1,7 @@
 .btn {
     --btn-height: 2.5rem;
+    --btn-color: var(--color-white);
+    --btn-background: var(--color-green);
 
     display: inline-flex;
     justify-content: center;
@@ -12,14 +14,21 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.05em;
-    color: var(--color-white);
-    border: 1px solid transparent;
+    color: var(--btn-color);
+    border: 1px solid var(--btn-background);
     border-radius: 0.25rem;
-    background: var(--color-green);
+    background: var(--btn-background);
+    transition: color 0.4s ease, border 0.4s ease, background-color 0.4s ease;
+
+    &:not(.btnStatic):hover {
+        color: var(--btn-background);
+        border: 1px solid var(--btn-background);
+        background: transparent;
+    }
 
     &Secondary {
-        color: var(--color-green);
-        background: var(--color-offwhite);
+        --btn-color: var(--color-green);
+        --btn-background: var(--color-offwhite);
 
         &.mixitup-control-active {
             border: 1px solid currentColor;
@@ -28,9 +37,15 @@
     }
 
     &Stroke {
-        color: var(--color-green);
+        color: var(--btn-background);
         border: 1px solid rgba(25,27,25,0.2);
         background: transparent;
+
+        &:not(.btnStatic):hover {
+            color: var(--btn-color);
+            border: 1px solid var(--btn-background);
+            background: var(--btn-background);
+        }
     }
 
     &Sm {
@@ -54,16 +69,23 @@
     }
 }
 
-.bg-green {
+.bg-green,
+.hero,
+.siteHeaderInverted {
 
     .btn {
-        color: var(--color-green);
-        background: var(--color-white);
+        --btn-color: var(--color-green);
+        --btn-background: var(--color-white);
 
         &Stroke {
-            color: var(--color-white);
             border: 1px solid rgba(240,237,234,0.2);
             background: transparent;
+
+            &:not(.btnStatic):hover {
+                color: var(--btn-color);
+                border: 1px solid var(--btn-background);
+                background: var(--btn-background);
+            }
         }
     }
 }
