--- a/src/scss/templates/_stay.scss
+++ b/src/scss/templates/_stay.scss
@@ -52,4 +52,72 @@
             }
         }
     }
+
+    &Listings {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: var(--spacer-y-x4) var(--gutter-x);
+        
+        @include md-breakpoint {
+            grid-template-columns: repeat(2,1fr);
+        }
+
+        &Item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: var(--gutter-x);
+            text-align: center;
+            
+            .image {
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+                padding-bottom: 120%;
+                border-radius: 0.25rem;
+                background: var(--color-offwhite);
+
+                img {
+                    position: absolute;
+                    z-index: 0;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transform: scale(1);
+                    will-change: transform;
+                    transition: transform 0.6s ease;
+                }
+            }
+
+            .title {
+                font-family: var(--font-serif);
+                font-size: var(--font-size-xl);
+                text-transform: uppercase;
+                line-height: 1.1;
+            }
+
+            .tags {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 0.25rem;
+            }
+
+            > .btn {
+                margin-top: calc(var(--gutter-x) * 0.5);
+            }
+
+            &:hover {
+    
+                .image {
+    
+                    img {
+                        transform: scale(1.1);
+                    }
+                }
+            }
+        }
+    }
 }
