--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1107,6 +1107,14 @@ html.lenis, html.lenis body {
   padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
   box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
 }
+.siteHeader .logo {
+  display: block;
+  height: var(--font-size-lg);
+}
+.siteHeader .logo svg {
+  width: auto;
+  height: 100%;
+}
 .siteHeader .left,
 .siteHeader .right {
   flex: 1;
@@ -1115,6 +1123,28 @@ html.lenis, html.lenis body {
 }
 .siteHeader .right {
   justify-content: flex-end;
+}
+.siteHeader .right .bookBtnMobile {
+  display: block;
+  width: 2rem;
+  height: 2rem;
+}
+@media only screen and (min-width: 720px) {
+  .siteHeader .right .bookBtnMobile {
+    display: none;
+  }
+}
+.siteHeader .right .bookBtnMobile svg {
+  width: 100%;
+  height: 100%;
+}
+.siteHeader .right .bookBtnDesktop {
+  display: none;
+}
+@media only screen and (min-width: 720px) {
+  .siteHeader .right .bookBtnDesktop {
+    display: inline-flex;
+  }
 }
 .siteHeaderInverted {
   color: var(--color-white);
@@ -1417,7 +1447,7 @@ h6 + .accordionContainer {
   background: var(--btn-background);
   transition: color 0.4s ease, border 0.4s ease, background-color 0.4s ease;
 }
-.btn:not(.btnStatic):hover {
+.btn:not(.btnStatic):not(.btnBare):hover {
   color: var(--btn-background);
   border: 1px solid var(--btn-background);
   background: transparent;
@@ -1426,7 +1456,7 @@ h6 + .accordionContainer {
   --btn-color: var(--color-green);
   --btn-background: var(--color-offwhite);
 }
-.btnSecondary:not(.btnStatic):hover {
+.btnSecondary:not(.btnStatic):not(.btnBare):hover {
   color: var(--btn-color);
   border: 1px solid var(--btn-color);
   background: transparent;
@@ -1444,7 +1474,7 @@ h6 + .accordionContainer {
   border: 1px solid rgba(25, 27, 25, 0.2);
   background: transparent;
 }
-.btnStroke:not(.btnStatic):hover {
+.btnStroke:not(.btnStatic):not(.btnBare):hover {
   color: var(--btn-color);
   border: 1px solid var(--btn-background);
   background: var(--btn-background);
@@ -1480,9 +1510,9 @@ h6 + .accordionContainer {
   border: 1px solid rgba(240, 237, 234, 0.2);
   background: transparent;
 }
-.bg-green .btnStroke:not(.btnStatic):hover,
-.hero .btnStroke:not(.btnStatic):hover,
-.siteHeaderInverted .btnStroke:not(.btnStatic):hover {
+.bg-green .btnStroke:not(.btnStatic):not(.btnBare):hover,
+.hero .btnStroke:not(.btnStatic):not(.btnBare):hover,
+.siteHeaderInverted .btnStroke:not(.btnStatic):not(.btnBare):hover {
   color: var(--btn-color);
   border: 1px solid var(--btn-background);
   background: var(--btn-background);
@@ -1643,9 +1673,10 @@ h6 + .btn,
 }
 .testimonialsCarouselSlide .details {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 1em;
+  gap: 0.5em 1em;
   margin-top: var(--font-size-md);
   font-size: var(--font-size-sm);
   text-transform: uppercase;
@@ -2267,6 +2298,10 @@ h6 + .btn,
      object-fit: cover;
 }
 
+.pageNav {
+  transform: translateY(0);
+  transition: transform 0.4s ease;
+}
 .pageNavCarousel {
   position: relative;
   overflow: hidden;
@@ -2376,7 +2411,7 @@ h6 + .btn,
     justify-content: center;
     align-items: center;
     gap: var(--spacer-x);
-    padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
+    padding: calc(var(--spacer-y) * 0.5) var(--spacer-x);
     box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
   }
 }
@@ -2412,6 +2447,9 @@ h6 + .btn,
   .pageNavSticky.has-book-btn .book-btn .btn {
     width: auto;
   }
+}
+.pageNav.is-hidden {
+  transform: translateY(100%);
 }
 
 .instaFeedHeader {
