--- a/src/scss/globals/_header.scss
+++ b/src/scss/globals/_header.scss
@@ -9,6 +9,16 @@
     padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
     box-shadow: 0px 1px 0px 0px rgba(25,27,25,0.1);
 
+    .logo {
+        display: block;
+        height: var(--font-size-lg);
+
+        svg {
+            width: auto;
+            height: 100%;
+        }
+    }
+
     .left,
     .right {
         flex: 1;
@@ -18,6 +28,32 @@
 
     .right {
         justify-content: flex-end;
+
+        .bookBtn {
+
+            &Mobile {
+                display: block;
+                width: 2rem;
+                height: 2rem;
+
+                @include sm-breakpoint {
+                    display: none;
+                }
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            &Desktop {
+                display: none;
+
+                @include sm-breakpoint {
+                    display: inline-flex;
+                }
+            }
+        }
     }
 
     &Inverted {
