--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -97,6 +97,8 @@
 }
 
 .pageNav {
+    transform: translateY(0);
+    transition: transform 0.4s ease;
 
     &Carousel {
         position: relative;
@@ -228,7 +230,7 @@
                 justify-content: center;
                 align-items: center;
                 gap: var(--spacer-x);
-                padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
+                padding: calc(var(--spacer-y) * 0.5) var(--spacer-x);
                 box-shadow: 0px 1px 0px 0px rgba(25,27,25,0.1);
             }
 
@@ -267,6 +269,10 @@
                 }
             }
         }
+    }
+
+    &.is-hidden {
+        transform: translateY(100%);
     }
 }
 
