--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -4,6 +4,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     padding-top: var(--header-height);
     color: var(--color-white);
     background-color: var(--color-dark);
@@ -85,7 +86,8 @@
             padding-bottom: min(60%,100vh);
         }
 
-        img {
+        img,
+        video {
             position: absolute;
             left: 0;
             top: 0;
@@ -325,5 +327,21 @@
                 }
             }
         }
+    }
+}
+
+.parallaxContainer {
+    position: relative;
+    overflow: hidden;
+
+    img,
+    video {
+        position: absolute;
+        left: 0;
+        top: auto;
+        bottom: 0;
+        width: 100%;
+        height: 111.11%;
+        object-fit: cover;
     }
 }
