--- a/src/scss/globals/_menu.scss
+++ b/src/scss/globals/_menu.scss
@@ -44,8 +44,8 @@
     &Nav {
         flex: 1;
         justify-content: center;
-        gap: calc(var(--font-size-xl) * 0.5);
-        font-size: var(--font-size-xl);
+        gap: 0.5em;
+        font-size: 2rem;
 
         ul {
             display: flex;
@@ -136,7 +136,8 @@
             width: 100%;
             height: 100%;
             opacity: 0;
-            transition: opacity 0.6s ease;
+            will-change: opacity;
+            transition: opacity 0.6s;
 
             img {
                 width: 100%;
