--- a/src/scss/templates/_stay.scss
+++ b/src/scss/templates/_stay.scss
@@ -35,10 +35,12 @@
         }
 
         .image {
+            z-index: 0;
 
             &::before {
                 content: '';
                 position: absolute;
+                z-index: 2;
                 left: 0;
                 bottom: 0;
                 width: 100%;
@@ -48,7 +50,22 @@
 
             img {
                 z-index: 0;
+                width: 100%;
+                height: 100%;
                 object-fit: cover;
+                transform: scale(1);
+                will-change: transform;
+                transition: transform 0.6s ease;
+            }
+        }
+
+        &:hover {
+
+            .image {
+
+                img {
+                    transform: scale(1.1);
+                }
             }
         }
     }
