--- a/src/scss/globals/_utilities.scss
+++ b/src/scss/globals/_utilities.scss
@@ -50,6 +50,7 @@
 [class*="text-block-"] { width: 100%; &.text-center { margin-left: auto; margin-right: auto; } }
 .text-block-9 { max-width: 9em; }
 .text-block-10 { max-width: 10em; }
+.text-block-15 { max-width: 15em; }
 .text-block-20 { max-width: 20em; }
 .text-block-30 { max-width: 30em; }
 .text-block-35 { max-width: 35em; }
