--- a/src/scss/globals/index.scss
+++ b/src/scss/globals/index.scss
@@ -8,6 +8,7 @@
 @import "accordion";
 @import "buttons";
 @import "carousel";
+@import "fancybox";
 @import "grid";
 @import "layout";
 @import "menu";
