--- a/src/scss/templates/_stay.scss
+++ b/src/scss/templates/_stay.scss
@@ -23,6 +23,7 @@
             justify-content: space-between;
             align-items: flex-start;
             padding: var(--spacer-y);
+            transform: translate3d(0,0,0);
         }
 
         .label {
@@ -40,12 +41,13 @@
             &::before {
                 content: '';
                 position: absolute;
-                z-index: 2;
+                z-index: 1;
                 left: 0;
                 bottom: 0;
                 width: 100%;
                 height: 50%;
                 background: linear-gradient(180deg, rgba(25,27,25,0) 0%, rgba(25,27,25,0.9) 100%);
+                transform: translate3d(0,0,0);
             }
 
             img {
