--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1101,25 +1101,41 @@ html.lenis, html.lenis body {
   border-bottom: 1px solid rgba(25, 27, 25, 0.1);
 }
 
-:root {
-  --header-height: calc((var(--spacer-y) * 1.5) + max(var(--font-size-lg), 2rem));
-}
-@media only screen and (min-width: 720px) {
-  :root {
-    --header-height: calc((var(--spacer-y) * 1.5) + max(var(--font-size-lg), 2.5rem));
-  }
-}
-
 .siteHeader {
   position: absolute;
   z-index: 1000;
   left: 0;
   top: 0;
+  width: 100%;
+  box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
+}
+.siteHeaderNotice {
+  position: relative;
+  padding: calc(var(--gutter-x) * 0.5) calc(2em + 1.25rem);
+  font-size: var(--font-size-sm);
+  text-align: center;
+  color: var(--color-green);
+  background: var(--color-yellow);
+}
+.siteHeaderNotice .message span {
+  font-weight: 500;
+}
+.siteHeaderNotice .closeBtn {
+  position: absolute;
+  top: 50%;
+  right: 1em;
+  width: 1.25rem;
+  height: 1.25rem;
+  transform: translateY(-50%);
+}
+.siteHeaderNotice .closeBtn svg {
+  width: 100%;
+  height: 100%;
+}
+.siteHeaderContainer {
   display: flex;
   align-items: center;
-  width: 100%;
   padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
-  box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
 }
 .siteHeader .logo {
   display: block;
@@ -1178,6 +1194,9 @@ body.siteHeader__fixed .siteHeader {
   background: var(--color-white);
   box-shadow: 0px 1px 0px 0px rgba(25, 27, 25, 0.1);
   transform: translateY(-100%);
+}
+body.siteHeader__fixed .siteHeaderNotice {
+  display: none;
 }
 body.siteHeader__fixed .siteHeader .siteMenuToggle span {
   background: var(--color-green);
@@ -2336,7 +2355,6 @@ h6 + .btnGroup,
 }
 
 .hero {
-  --header-height: calc((var(--spacer-y) * 1.5) + 2.5rem);
   position: relative;
   display: flex;
   flex-direction: column;
@@ -2348,6 +2366,10 @@ h6 + .btnGroup,
 .hero > *:not(.heroBg) {
   position: relative;
   z-index: 2;
+}
+.heroLg {
+  min-height: 90vmin;
+  min-height: 90svmin;
 }
 .heroFull {
   min-height: 100vh;
@@ -2636,14 +2658,14 @@ h6 + .btnGroup,
 }
 
 body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSticky {
-  top: var(--header-height);
+  top: var(--header-container-height);
 }
 body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSticky.has-book-btn {
   top: auto;
 }
 @media only screen and (min-width: 720px) {
   body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSticky.has-book-btn {
-    top: var(--header-height);
+    top: var(--header-container-height);
   }
 }
 
@@ -2684,6 +2706,11 @@ body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSti
 .instaFeedHeader a:hover::after {
   transform: scaleX(1);
   transform-origin: left;
+}
+
+.mediaFeature {
+  width: 100%;
+  height: 100vmin;
 }
 
 .parallaxContainer {
@@ -2744,7 +2771,7 @@ body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSti
   flex: 1;
   justify-content: center;
   gap: 0.5em;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 .siteMenuNav ul {
   display: flex;
@@ -2753,11 +2780,40 @@ body.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up .pageNavSti
   visibility: hidden;
 }
 .siteMenuNav ul li a {
-  visibility: visible;
-  padding: 0.25em 0;
+  position: relative;
+  display: block;
+  padding: 0.3em 0;
   line-height: 1;
   color: var(--color-white);
-  transition: color 0.6s ease;
+  visibility: visible;
+  transition: color 0.5s ease;
+}
+.siteMenuNav ul li a::before, .siteMenuNav ul li a::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  background: currentColor;
+  opacity: 0;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+.siteMenuNav ul li a::before {
+  right: calc(100% + 0.4em);
+  transform: translate(-300%, -50%);
+}
+.siteMenuNav ul li a::after {
+  left: calc(100% + 0.4em);
+  transform: translate(300%, -50%);
+}
+.siteMenuNav ul li a:hover::before, .siteMenuNav ul li a.active::before {
+  opacity: 1;
+  transform: translate(0, -50%);
+}
+.siteMenuNav ul li a:hover::after, .siteMenuNav ul li a.active::after {
+  opacity: 1;
+  transform: translate(0, -50%);
 }
 .siteMenuNav ul:hover li a {
   color: var(--color-green-light);
@@ -3428,6 +3484,30 @@ h6 + .articleDetails,
   background: rgba(240, 237, 234, 0.2);
 }
 
+.contactMapPin {
+  position: absolute;
+  z-index: 20;
+  left: 50%;
+  bottom: 50%;
+  display: block;
+  width: calc(var(--gutter-x) * 2.4);
+  height: calc(var(--gutter-x) * 2.7);
+  background-image: url(../images/map-pin.svg?52541b616143551ca2d55bec2ddab984);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transform: translate(-50%, 0);
+  animation: bounce 0.4s ease infinite alternate;
+}
+@keyframes bounce {
+  0% {
+    transform: translate(-50%, 0);
+  }
+  100% {
+    transform: translate(-50%, -20px);
+  }
+}
+
 .newsListings {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -3644,4 +3724,53 @@ h6 + .articleDetails,
 }
 .accommodationListingsItem:hover .image img {
   transform: scale(1.1);
+}
+
+.amenitiesListContainer {
+  position: relative;
+  overflow: hidden;
+  height: 300px;
+}
+.amenitiesListContainer::after {
+  content: "";
+  position: absolute;
+  z-index: 20;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(180deg, rgba(240, 237, 234, 0) 0%, rgb(240, 237, 234) 100%);
+  pointer-events: none;
+}
+.amenitiesListItem {
+  display: flex;
+  align-items: flex-start;
+  gap: 1.25rem;
+  padding: 1em 0;
+  font-weight: 500;
+  line-height: 1.5;
+}
+.amenitiesListItem:not(:last-child) {
+  border-bottom: 1px solid rgba(25, 27, 25, 0.1);
+}
+.amenitiesListItem .icon {
+  display: inline-flex;
+  align-items: center;
+  width: 1.25rem;
+  height: 1.5rem;
+  background: red;
+}
+.amenitiesListItem .icon svg {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.amenitiesList.is-open .amenitiesListContainer {
+  height: auto;
+}
+.amenitiesList.is-open .amenitiesListContainer::after {
+  opacity: 0;
+}
+
+.richtext + .amenitiesList {
+  margin-top: var(--spacer-y-x2);
 }
