--- a/src/scss/globals/_header.scss
+++ b/src/scss/globals/_header.scss
@@ -1,21 +1,46 @@
-:root {
-    --header-height: calc((var(--spacer-y) * 1.5) + max(var(--font-size-lg), 2rem));
-
-    @include sm-breakpoint {
-        --header-height: calc((var(--spacer-y) * 1.5) + max(var(--font-size-lg), 2.5rem));
-    }
-}
-
 .siteHeader {
     position: absolute;
     z-index: 1000;
     left: 0;
     top: 0;
-    display: flex;
-    align-items: center;
     width: 100%;
-    padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
     box-shadow: 0px 1px 0px 0px rgba(25,27,25,0.1);
+
+    &Notice {
+        position: relative;
+        padding: calc(var(--gutter-x) * 0.5) calc(2em + 1.25rem);
+        font-size: var(--font-size-sm);
+        text-align: center;
+        color: var(--color-green);
+        background: var(--color-yellow);
+
+        .message {
+
+            span {
+                font-weight: 500;
+            }
+        }
+
+        .closeBtn {
+            position: absolute;
+            top: 50%;
+            right: 1em;
+            width: 1.25rem;
+            height: 1.25rem;
+            transform: translateY(-50%);
+
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    &Container {
+        display: flex;
+        align-items: center;
+        padding: calc(var(--spacer-y) * 0.75) var(--spacer-x);
+    }
 
     .logo {
         display: block;
@@ -91,6 +116,10 @@ body {
             background: var(--color-white);
             box-shadow: 0px 1px 0px 0px rgba(25,27,25,0.1);
             transform: translateY(-100%);
+
+            &Notice {
+                display: none;
+            }
 
             .siteMenuToggle {
     
