--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -1,6 +1,4 @@
 .hero {
-    --header-height: calc((var(--spacer-y) * 1.5) + 2.5rem);
-
     position: relative;
     display: flex;
     flex-direction: column;
@@ -12,6 +10,11 @@
     > *:not(.heroBg) {
         position: relative;
         z-index: 2;
+    }
+
+    &Lg {
+        min-height: 90vmin;
+        min-height: 90svmin;
     }
 
     &Full {
@@ -338,13 +341,13 @@ body {
     &.siteHeader__fixed.siteHeader__can-animate.siteHeader__scroll-up {
 
         .pageNavSticky {
-            top: var(--header-height);
+            top: var(--header-container-height);
 
             &.has-book-btn {
                 top: auto;
 
                 @include sm-breakpoint {
-                    top: var(--header-height);
+                    top: var(--header-container-height);
                 }
             }
         }
@@ -401,6 +404,11 @@ body {
             }
         }
     }
+}
+
+.mediaFeature {
+    width: 100%;
+    height: 100vmin;
 }
 
 .parallaxContainer {
