--- a/src/scss/globals/_menu.scss
+++ b/src/scss/globals/_menu.scss
@@ -45,7 +45,7 @@
         flex: 1;
         justify-content: center;
         gap: 0.5em;
-        font-size: 2rem;
+        font-size: 1.8rem;
 
         ul {
             display: flex;
@@ -56,11 +56,50 @@
             li {
 
                 a {
-                    visibility: visible;
-                    padding: 0.25em 0;
+                    position: relative;
+                    display: block;
+                    padding: 0.3em 0;
                     line-height: 1;
                     color: var(--color-white);
-                    transition: color 0.6s ease;
+                    visibility: visible;
+                    transition: color 0.5s ease;
+
+                    &::before,
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 50%;
+                        width: 0.25rem;
+                        height: 0.25rem;
+                        border-radius: 50%;
+                        background: currentColor;
+                        opacity: 0;
+                        transition: opacity 0.3s ease, transform 0.3s ease;
+                    }
+
+                    &::before {
+                        right: calc(100% + 0.4em);
+                        transform: translate(-300%,-50%);
+                    }
+
+                    &::after {
+                        left: calc(100% + 0.4em);
+                        transform: translate(300%,-50%);
+                    }
+
+                    &:hover,
+                    &.active {
+
+                        &::before {
+                            opacity: 1;
+                            transform: translate(0,-50%);
+                        }
+    
+                        &::after {
+                            opacity: 1;
+                            transform: translate(0,-50%);
+                        }
+                    }
                 }
             }
 
