--- a/src/scss/templates/_stay.scss
+++ b/src/scss/templates/_stay.scss
@@ -140,3 +140,71 @@
         }
     }
 }
+
+.amenitiesList {
+
+    &Container {
+        position: relative;
+        overflow: hidden;
+        height: 300px;
+
+        &::after {
+            content: '';
+            position: absolute;
+            z-index: 20;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100px;
+            background: linear-gradient(180deg, rgba(240,237,234,0) 0%, rgba(240,237,234,1) 100%);
+            pointer-events: none;
+        }
+    }
+
+    &Item {
+        display: flex;
+        align-items: flex-start;
+        gap: 1.25rem;
+        padding: 1em 0;
+        font-weight: 500;
+        line-height: 1.5;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid rgba(25,27,25,0.1);
+        }
+
+        .icon {
+            display: inline-flex;
+            align-items: center;
+            width: 1.25rem;
+            height: 1.5rem;
+            background: red;
+            
+            svg {
+                width: 1.25rem;
+                height: 1.25rem;
+            }
+        }
+    }
+
+    &.is-open {
+
+        .amenitiesList { 
+
+            &Container {
+                height: auto;
+
+                &::after {
+                    opacity: 0;
+                }
+            }
+        }
+    }
+}
+
+.richtext {
+
+    + .amenitiesList {
+        margin-top: var(--spacer-y-x2);
+    }
+}
